--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "syntax",
     "theme"
   ],
-  "repository": "https://github.com/atom/mac-github-syntax",
+  "repository": "https://github.com/ahmadselee/mac-github-syntax",
   "license": "MIT",
   "engines": {
     "atom": ">=0.174.0 <2.0.0"
@@ -18,16 +18,5 @@
     "url": "https://github.com/ahmadseleem/mac-github-syntax/issues"
   },
 
-  "homepage": "https://github.com/ahmadseleem/mac-github-syntax",
-
-  "_atomModuleCache": {
-    "version": 1,
-    "dependencies": [],
-    "extensions": {
-      ".json": [
-        "package.json"
-      ]
-    },
-    "folders": []
-  }
+  "homepage": "https://github.com/ahmadseleem/mac-github-syntax"
 }
