--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "mac-github-syntax",
   "theme": "syntax",
   "version": "1.3.4",
-  "description": "A nicer Light theme: quick MIX between atom-github-2014 & mac-classic themes",
+  "description": "A nicer Light theme: quick MIX between atom-github-2014 & mac-classic themes.",
+  "license": "MIT",
+  "repository": "https://github.com/ahmadseleem/mac-github-syntax",
   "keywords": [
     "syntax",
     "theme"
   ],
-  "repository": "https://github.com/ahmadseleem/mac-github-syntax",
-  "license": "MIT",
   "engines": {
     "atom": ">=0.174.0 <2.0.0"
-  },
+  }
   "bugs": {
     "url": "https://github.com/ahmadseleem/mac-github-syntax/issues"
   },
